--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -14,7 +15,8 @@
 <!-- Custom CSS -->
 <link href="dist/css/sb-admin-2.css" rel="stylesheet" />
 <!-- Custom Fonts -->
-<link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+<link href="vendor/font-awesome/css/font-awesome.min.css"
+	rel="stylesheet" type="text/css" />
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
@@ -34,15 +36,19 @@
 						<form role="form" th:action="@{/login}" method="POST">
 							<fieldset>
 								<div class="form-group">
-									<input class="form-control" th:placeholder="E-mail" name="email" type="email" autofocus="autofocus" />
+									<input class="form-control" th:placeholder="E-mail"
+										name="email" type="email" autofocus="autofocus" />
 								</div>
 								<div class="form-group">
-									<input class="form-control" th:placeholder="Password" name="password" type="password" value="" />
+									<input class="form-control" th:placeholder="Password"
+										name="password" type="password" value="" />
 								</div>
 								<div align="center" th:if="${param.error}">
-									<p style="font-size: 20; color: #FF1C19;">Email or Password invalid, please verify</p>
+									<p style="font-size: 20; color: #FF1C19;">Email or Password
+										invalid, please verify</p>
 								</div>
-								<button class="btn btn-lg btn-success btn-block" name="Submit" value="Login" type="Submit" th:text="Login"></button>
+								<button class="btn btn-lg btn-success btn-block" name="Submit"
+									value="Login" type="Submit" th:text="Login"></button>
 							</fieldset>
 						</form>
 					</div>
