--- a/src/main/resources/templates/addBook.html
+++ b/src/main/resources/templates/addBook.html
@@ -22,6 +22,9 @@
 				<td><input type="submit" value="Submit" /></td>
 			</tr>
 		</table>
+		
+		
+		<!-- <p th:each="smokeTest : ${smokeTests}" th:text="${smokeTest.name}">A Smoke Test</p> -->
 	</form>
 	<!-- jQuery -->
 	<script src="/vendor/jquery/jquery.min.js"></script>
