--- a/src/main/resources/templates/bootstrap.html
+++ b/src/main/resources/templates/bootstrap.html
@@ -9,16 +9,240 @@
 <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.min.css" />
 <link rel="stylesheet" href="/vendor/bootstrap/css/font-awesome.min.css" />
 <link rel="stylesheet" href="/vendor/bootstrap/css/user.css" />
+
+<style type="text/css">
+.jumbotron {
+	background-color: #2E2D88;
+	color: white;
+}
+
+.tab-content {
+	border-left: 1px solid #ddd;
+	border-right: 1px solid #ddd;
+	border-buttom: 1px solid #ddd;
+	padding: 10px;
+}
+
+.nav-tabs {
+	margin-bottom: 0;
+}
+</style>
 </head>
 <body>
 
 
 	<div class="container">
-	<div class="page-header">
-		<h1>Bootstrap Tutorial</h1>
+		<div class="page-header">
+			<h1>Bootstrap Tutorial</h1>
+		</div>
+		<div class="jumbotron">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+				pellentesque laoreet tempor. Donec ut nisi metus. Aliquam congue
+				urna eu neque porttitor aliquam. Morbi euismod ipsum justo, vitae
+				semper mauris sodales id. Proin vestibulum in sapien quis tempus.
+				Fusce pharetra euismod lectus molestie feugiat. Aliquam gravida
+				nulla nec justo iaculis, vitae volutpat nisi eleifend. Nunc auctor
+				purus metus, non sodales leo cursus at. Nulla metus tortor,
+				malesuada quis lacus nec, ultrices dictum tortor. Cras egestas a
+				ligula ac semper. Curabitur faucibus elit vitae vehicula sagittis.
+				Aliquam convallis ligula erat, eu vulputate nunc imperdiet id. In
+				hac habitasse platea dictumst. Donec in accumsan nunc.</p>
+			<a href="#" class="btn btn-info">More Info</a>
+			<button type="submit" class="btn btn-info">More Info Button</button>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+				pellentesque laoreet tempor. Donec ut nisi metus. Aliquam congue
+				urna eu neque porttitor aliquam. Morbi euismod ipsum justo, vitae
+				semper mauris sodales id. Proin vestibulum in sapien quis tempus.
+				Fusce pharetra euismod lectus molestie feugiat. Aliquam gravida
+				nulla nec justo iaculis, vitae volutpat nisi eleifend. Nunc auctor
+				purus metus, non sodales leo cursus at. Nulla metus tortor,
+				malesuada quis lacus nec, ultrices dictum tortor. Cras egestas a
+				ligula ac semper. Curabitur faucibus elit vitae vehicula sagittis.
+				Aliquam convallis ligula erat, eu vulputate nunc imperdiet id. In
+				hac habitasse platea dictumst. Donec in accumsan nunc.</p>
+
+		</div>
+
+		<!-- Standard button -->
+		<button type="button" class="btn btn-default">Default</button>
+
+		<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+		<button type="button" class="btn btn-primary">Primary</button>
+
+		<!-- Indicates a successful or positive action -->
+		<button type="button" class="btn btn-success">Success</button>
+
+		<!-- Contextual button for informational alert messages -->
+		<button type="button" class="btn btn-info">Info</button>
+
+		<!-- Indicates caution should be taken with this action -->
+		<button type="button" class="btn btn-warning">Warning</button>
+
+		<!-- Indicates a dangerous or potentially negative action -->
+		<button type="button" class="btn btn-danger">Danger</button>
+
+		<!-- Deemphasize a button by making it look like a link while maintaining button behavior -->
+		<button type="button" class="btn btn-link">Link</button>
+
+		<p />
+		<button type="button" class="btn btn-primary btn-lg btn-block">Block
+			level button</button>
+		<button type="button" class="btn btn-default btn-lg btn-block">Block
+			level button</button>
+
 	</div>
-	
+
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6">
+				<h4>Column 1</h4>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+				pellentesque laoreet tempor. Donec ut nisi metus. Aliquam congue
+				urna eu neque porttitor aliquam. Morbi euismod ipsum justo, vitae
+				semper mauris sodales id. Proin vestibulum in sapien quis tempus.
+				Fusce pharetra euismod lectus molestie feugiat. Aliquam gravida
+				nulla nec justo iaculis, vitae volutpat nisi eleifend. Nunc auctor
+				purus metus, non sodales leo cursus at. Nulla metus tortor,
+				malesuada quis lacus nec, ultrices dictum tortor. Cras egestas a
+				ligula ac semper. Curabitur faucibus elit vitae vehicula sagittis.
+				Aliquam convallis ligula erat, eu vulputate nunc imperdiet id. In
+				hac habitasse platea dictumst. Donec in accumsan nunc.
+			</div>
+			<!-- <div class="clearfix"></div> -->
+			<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+				<h4>Column 2</h4>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+				pellentesque laoreet tempor. Donec ut nisi metus. Aliquam congue
+				urna eu neque porttitor aliquam. Morbi euismod ipsum justo, vitae
+				semper mauris sodales id. Proin vestibulum in sapien quis tempus.
+				Fusce pharetra euismod lectus molestie feugiat. Aliquam gravida
+				nulla nec justo iaculis, vitae volutpat nisi eleifend. Nunc auctor
+				purus metus, non sodales leo cursus at. Nulla metus tortor,
+				malesuada quis lacus nec, ultrices dictum tortor. Cras egestas a
+				ligula ac semper. Curabitur faucibus elit vitae vehicula sagittis.
+				Aliquam convallis ligula erat, eu vulputate nunc imperdiet id. In
+				hac habitasse platea dictumst. Donec in accumsan nunc.
+			</div>
+
+			<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+				<h4>Column 3</h4>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+				pellentesque laoreet tempor. Donec ut nisi metus. Aliquam congue
+				urna eu neque porttitor aliquam. Morbi euismod ipsum justo, vitae
+				semper mauris sodales id. Proin vestibulum in sapien quis tempus.
+				Fusce pharetra euismod lectus molestie feugiat. Aliquam gravida
+				nulla nec justo iaculis, vitae volutpat nisi eleifend. Nunc auctor
+				purus metus, non sodales leo cursus at. Nulla metus tortor,
+				malesuada quis lacus nec, ultrices dictum tortor. Cras egestas a
+				ligula ac semper. Curabitur faucibus elit vitae vehicula sagittis.
+				Aliquam convallis ligula erat, eu vulputate nunc imperdiet id. In
+				hac habitasse platea dictumst. Donec in accumsan nunc.
+			</div>
+
+			<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+				<h4>Column 4</h4>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+				pellentesque laoreet tempor. Donec ut nisi metus. Aliquam congue
+				urna eu neque porttitor aliquam. Morbi euismod ipsum justo, vitae
+				semper mauris sodales id. Proin vestibulum in sapien quis tempus.
+				Fusce pharetra euismod lectus molestie feugiat. Aliquam gravida
+				nulla nec justo iaculis, vitae volutpat nisi eleifend. Nunc auctor
+				purus metus, non sodales leo cursus at. Nulla metus tortor,
+				malesuada quis lacus nec, ultrices dictum tortor. Cras egestas a
+				ligula ac semper. Curabitur faucibus elit vitae vehicula sagittis.
+				Aliquam convallis ligula erat, eu vulputate nunc imperdiet id. In
+				hac habitasse platea dictumst. Donec in accumsan nunc.
+			</div>
+		</div>
 	</div>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-3 col-md-3 col-sm-6 sol-xs-12">
+				<h4>
+					<a href="#col1Conten" data-toggle="collapse">Column 1</a>
+				</h4>
+
+				<div id="col1Conten" class="collapse in">Lorem ipsum dolor sit
+					amet, consectetur adipiscing elit. Nam pellentesque laoreet tempor.
+					Donec ut nisi metus. Aliquam congue urna eu neque porttitor
+					aliquam. Morbi euismod ipsum justo, vitae semper mauris sodales id.
+					Proin vestibulum in sapien quis tempus. Fusce pharetra euismod
+					lectus molestie feugiat. Aliquam gravida nulla nec justo iaculis,
+					vitae volutpat nisi eleifend. Nunc auctor purus metus, non sodales
+					leo cursus at. Nulla metus tortor, malesuada quis lacus nec,
+					ultrices dictum tortor. Cras egestas a ligula ac semper. Curabitur
+					faucibus elit vitae vehicula sagittis. Aliquam convallis ligula
+					erat, eu vulputate nunc imperdiet id. In hac habitasse platea
+					dictumst. Donec in accumsan nunc.</div>
+
+			</div>
+			<div class="col-lg-6 col-md-6 col-sm-8 sol-xs-12">
+				<h4>
+					<a href="#col2Conten" data-toggle="collapse">Column 2</a>
+				</h4>
+
+				<div id="col2Conten" class="collapse">Lorem ipsum dolor sit
+					amet, consectetur adipiscing elit. Nam pellentesque laoreet tempor.
+					Donec ut nisi metus. Aliquam congue urna eu neque porttitor
+					aliquam. Morbi euismod ipsum justo, vitae semper mauris sodales id.
+					Proin vestibulum in sapien quis tempus. Fusce pharetra euismod
+					lectus molestie feugiat. Aliquam gravida nulla nec justo iaculis,
+					vitae volutpat nisi eleifend. Nunc auctor purus metus, non sodales
+					leo cursus at. Nulla metus tortor, malesuada quis lacus nec,
+					ultrices dictum tortor. Cras egestas a ligula ac semper. Curabitur
+					faucibus elit vitae vehicula sagittis. Aliquam convallis ligula
+					erat, eu vulputate nunc imperdiet id. In hac habitasse platea
+					dictumst. Donec in accumsan nunc.</div>
+
+			</div>
+
+		</div>
+	</div>
+
+	<div class="container">
+		<div class="well">
+			<p><h4>Screen &lt; 768px</h4> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+				pellentesque laoreet tempor. Donec ut nisi metus. Aliquam congue
+				urna eu neque porttitor aliquam. Morbi euismod ipsum justo, vitae
+				semper mauris sodales id. Proin vestibulum in sapien quis tempus.
+				Fusce pharetra euismod lectus molestie feugiat. Aliquam gravida
+				nulla nec justo iaculis, vitae volutpat nisi eleifend. Nunc auctor
+				purus metus, non sodales leo cursus at. Nulla metus tortor,
+				malesuada quis lacus nec, ultrices dictum tortor. Cras egestas a
+				ligula ac semper. Curabitur faucibus elit vitae vehicula sagittis.
+				Aliquam convallis ligula erat, eu vulputate nunc imperdiet id. In
+				hac habitasse platea dictumst. Donec in accumsan nunc.</p>
+
+
+
+
+		</div>
+		<div class="well hidden-sm hidden-md hidden-lg">
+			<p><h4>Screen &lt; 768px</h4> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+				pellentesque laoreet tempor. Donec ut nisi metus. Aliquam congue
+				urna eu neque porttitor aliquam. Morbi euismod ipsum justo, vitae
+				semper mauris sodales id. Proin vestibulum in sapien quis tempus.
+				Fusce pharetra euismod lectus molestie feugiat. Aliquam gravida
+				nulla nec justo iaculis, vitae volutpat nisi eleifend. Nunc auctor
+				purus metus, non sodales leo cursus at. Nulla metus tortor,
+				malesuada quis lacus nec, ultrices dictum tortor. Cras egestas a
+				ligula ac semper. Curabitur faucibus elit vitae vehicula sagittis.
+				Aliquam convallis ligula erat, eu vulputate nunc imperdiet id. In
+				hac habitasse platea dictumst. Donec in accumsan nunc.</p>
+
+
+
+
+		</div>
+	</div>
+
+
+
+
+
+
+
 	<!-- jQuery -->
 	<script src="/vendor/jquery/jquery.min.js"></script>
 	<!-- Bootstrap Core JavaScript -->
