--- a/src/main/resources/templates/bootstrap2.html
+++ b/src/main/resources/templates/bootstrap2.html
@@ -29,19 +29,19 @@
 </head>
 <body style="background-color: #e6ecf0">
 	<div class="nvabar navbar-default">
-		<div class="container-fluid">
-			<div class="navbar-header"><a class="navbar-brand" href="#">aliu.com</a></div>
+	<div class="navbar-header"><a class="navbar-brand" href="#">Aliu.com</a></div>
+		<div class="container">
+			
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="#">Home</a></li>
-				<li><a href="#">Page 1</a></li>
-				<li><a href="#">Page 2</a></li>
-				<li><a href="#">Page 3</a></li>
+				<li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span> Home </a></li>
+				<li><a href="#"><span class="glyphicon glyphicon-bell"></span> Notifications </a></li>
+				<li><a href="#"><span class="glyphicon glyphicon-envelope"></span> Messages </a></li>
 			</ul>
 	</div>
 	</div>
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-3 col.md-3 col-sm-3 col-xs-1"></div>
+			<div class="col-lg-3 col.md-3 col-sm-3 col-xs-1 tab-content"></div>
 			<div class="col-lg-6 col.md-6 col-sm-6 col-xs-12 tab-content">
 				<p>
 				<h4>Column 1</h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porttitor pharetra nunc in eleifend. Cras et tortor id mauris
@@ -53,13 +53,13 @@
 				Proin facilisis ligula sapien, ut fermentum purus tincidunt id. Curabitur tellus lacus, porta et sagittis sit amet, semper rhoncus quam.
 				</p>
 		</div>
-			<div class="col-lg-3 col.md-3 col-sm-3 col-xs-1"></div>
+			<div class="col-lg-3 col.md-3 col-sm-3 col-xs-1 tab-content"></div>
 	</div>
 	</div>
 	<br>
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-3 col.md-3 col-sm-3 col-xs-1"></div>
+			<div class="col-lg-3 col.md-3 col-sm-3 col-xs-1 tab-content"></div>
 			<div class="col-lg-6 col.md-6 col-sm-6 col-xs-12 tab-content">
 				<p>
 				<h4>Another Container</h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porttitor pharetra nunc in eleifend. Cras et tortor id
@@ -72,7 +72,7 @@
 				quam.
 				</p>
 		</div>
-			<div class="col-lg-3 col.md-3 col-sm-3 col-xs-1"></div>
+			<div class="col-lg-3 col.md-3 col-sm-3 col-xs-1 tab-content"></div>
 	</div>
 	</div>
 	<!-- jQuery -->
