--- a/src/main/resources/templates/bootstrap2.html
+++ b/src/main/resources/templates/bootstrap2.html
@@ -25,18 +25,44 @@
 .nav-tabs {
 	margin-bottom: 0;
 }
+
+.search-input {
+	background-color: #f5f8fa;
+	border-radius: 21px;
+	border: 1px solid #e6ecf0;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	color: #14171a;
+	display: block;
+	font-size: 12px;
+	height: 32px;
+	line-height: 16px;
+	padding: 8px 32px 8px 12px;
+	transition: all .2s ease-in-out;
+	width: 100%
+}
+
+.search-icon {
+	cursor: pointer;
+	display: block;
+	height: 26px;
+	position: absolute;
+	right: 50px;
+	top: 6px;
+	width: 26px
+}
 </style>
 </head>
 <body style="background-color: #e6ecf0">
 	<div class="nvabar navbar-default">
-	<div class="navbar-header"><a class="navbar-brand" href="#">Aliu.com</a></div>
+		<div class="navbar-header"><a class="navbar-brand" href="#">Aliu.com</a></div>
 		<div class="container">
-			
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span> Home </a></li>
-				<li><a href="#"><span class="glyphicon glyphicon-bell"></span> Notifications </a></li>
-				<li><a href="#"><span class="glyphicon glyphicon-envelope"></span> Messages </a></li>
+				<li class="active"><a href="#"><span class="glyphicon glyphicon-home "></span> Home </a></li>
+				<li><a href="#"><span class="glyphicon glyphicon-bell "></span> Notifications </a></li>
+				<li><a href="#"><span class="glyphicon glyphicon-envelope "></span> Messages </a></li>
 			</ul>
+			<div style="padding: 15px; font-family: Arial; float: right; text-align: left;">Hello <span class="glyphicon glyphicon-search "></span></div>
 	</div>
 	</div>
 	<div class="container">
