--- a/src/main/resources/templates/bootstrap3.html
+++ b/src/main/resources/templates/bootstrap3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" ng-app>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
 <title>Tutorial Point</title>
@@ -7,7 +7,9 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.min.css" />
+
 <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
+
 </head>
 
 <body style="background-color: #e6ecf0">
